fix wrapper-point spacing to match wrapper-loadout

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@
 .wrapper-point {
   display: flex;
   justify-content: space-between;
-  gap: 2rem;
   padding: 1em 0;
 }
 
